# SWP_example

./: CMakeLists.txt  LICENSE  README.md  mainwindow.h  mainwindow.ui  tablecontroller.h
PatManMySql/: CMakeLists.txt  main.cpp  patienttablemodel.cpp  patienttablemodel.h
PatManMySql/patientdatacalculator/: patientdatacalculator.h
PatManSqLite/: CMakeLists.txt  mainwindow.cpp  patienttablemodel.cpp  patienttablemodel.h  tablecontroller.cpp  tablecontroller.h
PatManSqLite/patientdatacalculator/: CMakeLists.txt  patientdatacalculator.cpp
patientdatacalculator/: CMakeLists.txt  CMakeLists.txt.in  calculatebmi_tests.cpp  patientdatacalculator.cpp
